--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react-transition-group": "^4.4.5",
+    "primereact": "latest",
+    "primeicons": "^7.0.0",
+    "primeflex": "^3.3.1",
+    "@vitejs/plugin-react": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-json-tree": "^0.19.0",
     "scss": "^0.2.4"
   },
   "devDependencies": {
